--- a/jobs-home.html
+++ b/jobs-home.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>IMI - A Global People Company</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
@@ -108,22 +108,38 @@
         <div class="main-container">
             <section class="cover imagebg height-100 section--ken-burns">
                 <div class="background-image-holder"><img alt="find a good job with imi today" src="img/imi-good jobs home-header.jpg"></div>
-                <div class="container pos-vertical-center">
+                <div class="container pos-vertical-center" >
                     <div class="row">
                         <div class="col-sm-12">
                             <h1>Find a <b>good job</b> today!</h1>
                             <p class="lead"><b>
 					Upload your resume</b> – It only takes a few seconds </p>
-                            <div class="boxed boxed--lg bg--white text-left">
+                            <div class="boxed boxed--lg bg--white text-left"  >
                                 <form class="form--horizontal">
-                                    <div class="col-sm-3"> <input type="text" name="keywords" placeholder="What - job title, keywords, or company"> </div>
-                                    <div class="col-sm-3"> <input type="text" name="location" placeholder="Where - city, state or province"> </div>
-                                    <div class="col-sm-2"> <button type="submit" class="btn type--uppercase btn--primary">START TODAY</button> </div>
+                                    <div class="col-sm-4"> <input type="text" name="keywords" placeholder="What - job title, keywords, or company"> </div>
+                                    <div class="col-sm-4"> <input type="text" name="location" placeholder="Where - city, state or province"> </div>
+                                    <div class="col-sm-4"> <button type="submit" class="btn type--uppercase btn--primary">GET HIRED</button> </div>
                                 </form>
                             </div>
                         </div>
+
                     </div>
+                    <!-- <div class="boxed boxed--lg bg--white text-left" style="width:100%; margin:auto 0; padding:auto 0 " >
+                        <form class="form--horizontal" >
+                            <div class="col-sm-3" > <input type="text" name="keywords" placeholder="What - job title, keywords, or company"> </div>
+                            <div class="col-sm-3"> <input type="text" name="location" placeholder="Where - city, state or province"> </div>
+                            <div class="col-sm-2"> <button type="submit" class="btn type--uppercase btn--primary">START TODAY</button> </div>
+                        </form>
+                    </div> -->
+
                 </div>
+                <!-- <div class="boxed boxed--lg bg--white text-left" style="margin-top:445px z-index: 1000;">
+                    <form class="form--horizontal">
+                        <div class="col-sm-3"> <input type="text" name="keywords" placeholder="What - job title, keywords, or company"> </div>
+                        <div class="col-sm-3"> <input type="text" name="location" placeholder="Where - city, state or province"> </div>
+                        <div class="col-sm-2"> <button type="submit" class="btn type--uppercase btn--primary">START TODAY</button> </div>
+                    </form>
+                </div> -->
             </section>
             <section class="switchable feature-large space--md switchable--switch">
                 <div class="container">
@@ -187,21 +203,34 @@
             </section>
             <a id="cta" class="in-page-link"></a>
             <section class="switchable imagebg section--ken-burns switchable--switch">
-                <div class="background-image-holder"> <img alt="Never miss a good job opportunity in your area with imi and Rhonda." src="img/imi-rhonda-solutions.jpg"> </div>
+                <div id="imgDiv-jobs-home" class="background-image-holder">
+                  <img alt="Never miss a good job opportunity in your area with imi and Rhonda." src="img/imi-mobile-bg-B.jpg"> </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-5">
-                            <div class="switchable__text">
+                            <div class="switchable__text formSameAsCareerPage">
                                 <h2>Never miss a job opportunity in your area.</h2>
                                 <p class="lead"> Sign up to receive up-to-date job openings from Rhonda.</p>
-                                <form action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms."> <input class="validate-required" type="text" name="NAME" placeholder="Your Name"> <input class="validate-required validate-email" type="email" name="EMAIL" placeholder="Email Address"> <input class="validate-required" type="checkbox" name="group[13737][1]"> <button type="submit" class="btn btn--primary type--uppercase">Subscribe</button>
+                                <script charset="utf-8" type="text/javascript" src="http://js.hsforms.net/forms/v2.js"></script>
+                                <script>
+                                  hbspt.forms.create({
+                                    portalId: "3221062",
+                                    formId: "4b5baabf-8510-49ff-ace0-c9e6bef12ae4",
+                                    css: ""
+                                  });
+                                </script>
+                                <!-- <form action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms."> <input class="validate-required" type="text" name="NAME" placeholder="Your Name"> <input class="validate-required validate-email" type="email" name="EMAIL" placeholder="Email Address"> <input class="validate-required" type="checkbox" name="group[13737][1]"> <button type="submit" class="btn btn--primary type--uppercase">Subscribe</button>
                                     <div aria-hidden="true"> <input type="text" name="b_77142ece814d3cff52058a51f_f300c9cce8" tabindex="-1" value=""> </div>
-                                </form>
+                                </form> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+
+            <!-- <div class="element">Test</div> -->
+
+
             <footer class="text-center-xs space--xs">
                 <div class="container">
                     <div class="row">
