--- a/jobs-list.html
+++ b/jobs-list.html
@@ -265,16 +265,24 @@
                 </div>
             </section>
             <section class="switchable imagebg switchable--switch section--ken-burns">
-                <div class="background-image-holder"> <img alt="background" src="img/rhonda-find-job2.jpg"> </div>
+                <div id="imgDiv-jobs-list" class="background-image-holder"> <img alt="background" src="img/imi-mobile-bg-A.jpg"> </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-5">
-                            <div class="switchable__text">
+                            <div class="switchable__text formSameAsCareerPage">
                                 <h2>Never miss a job opportunity in your area.</h2>
                                 <p class="lead"> Sign up to receive up-to-date job openings from Rhonda. </p>
-                                <form action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms."> <input class="validate-required" type="text" name="NAME" placeholder="Your Name"> <input class="validate-required validate-email" type="email" name="EMAIL" placeholder="Email Address"> <input class="validate-required" type="checkbox" name="group[13737][1]"> <span>I have read and agree to the <a href="#">terms and conditions</a></span> <button type="submit" class="btn btn--primary type--uppercase">Subscribe To Newsletter</button>
+                                <script charset="utf-8" type="text/javascript" src="http://js.hsforms.net/forms/v2.js"></script>
+                                <script>
+                                  hbspt.forms.create({
+                                    portalId: "3221062",
+                                    formId: "4b5baabf-8510-49ff-ace0-c9e6bef12ae4",
+                                    css: ""
+                                  });
+                                </script>
+                                <!-- <form action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms."> <input class="validate-required" type="text" name="NAME" placeholder="Your Name"> <input class="validate-required validate-email" type="email" name="EMAIL" placeholder="Email Address"> <input class="validate-required" type="checkbox" name="group[13737][1]"> <span>I have read and agree to the <a href="#">terms and conditions</a></span> <button type="submit" class="btn btn--primary type--uppercase">Subscribe To Newsletter</button>
                                     <div aria-hidden="true"> <input type="text" name="b_77142ece814d3cff52058a51f_f300c9cce8" tabindex="-1" value=""> </div>
-                                </form>
+                                </form> -->
                             </div>
                         </div>
                     </div>
