pages in jobs changed 2nd version

--- a/solutions-home.html
+++ b/solutions-home.html
@@ -116,7 +116,7 @@
                 </ul>
               </div>
               <div class="bar__module">
-                <a class="btn btn--sm type--uppercase btn--primary" href="#purchase-template"> <span class="btn__text">
+                <a class="btn btn--sm type--uppercase btn--primary" href="contact.html"> <span class="btn__text">
                                     Contact</span> </a>
               </div>
             </div>
