--- a/rhonda.html
+++ b/rhonda.html
@@ -140,7 +140,7 @@
         <div style="display:table-cell;  vertical-align:middle;" class="container">
           <div class="row">
             <div class="col-sm-12">
-              <div class="typed-headline"> <span class="h2 inline-block"><p>I'm Rhonda — An Artificial Intelligence built for</p></span> <span class="h2 inline-block typed-text typed-text--cursor color--white" data-typed-strings="automation, workforce management,  interviews, scheduling, surveys, rating">automation</span>                </div>
+              <div class="typed-headline"> <span class="h2 inline-block"><p style="color:#383838">I'm Rhonda — An Artificial Intelligence built for</p></span> <span class="h2 inline-block typed-text typed-text--cursor color--white" data-typed-strings="automation, workforce management,  interviews, scheduling, surveys, rating">automation</span>                </div>
             </div>
           </div>
         </div>
@@ -187,7 +187,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <div class="feature feature-5 boxed boxed--lg boxed--border"> <i class="icon icon-Clock-Forward icon--lg"></i>
+            <div class="feature feature-5 boxed boxed--lg boxed--border"> <i style="color:#666666" class="icon icon-Clock-Forward icon--lg"></i>
               <div class="feature__body">
                 <h5>Always on the Job</h5>
                 <p> Rhonda works 24/7/365 to maximize the performance of your workforce. </p>
@@ -195,7 +195,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="feature feature-5 boxed boxed--lg boxed--border"> <i class="icon icon-Thumb icon--lg"></i>
+            <div class="feature feature-5 boxed boxed--lg boxed--border"> <i style="color:#666666" class="icon icon-Thumb icon--lg"></i>
               <div class="feature__body">
                 <h5>Always Available</h5>
                 <p> Empower your employees to make the right decisions at the right time. </p>
@@ -225,9 +225,9 @@
                 <div class="hover-element__initial">
                   <div class="background-image-holder"> <img alt="Rhonda Intuitively engages conversations by using Artificial Intelligence" src="img/rhonda-response.jpg"> </div>
                 </div>
-                <div class="hover-element__reveal" data-overlay="4">
+                <div class="rhondaPage hover-element__reveal myhover" data-overlay="4">
                   <div class="project-thumb__title">
-                    <h5>Intelligent Conversation</h5> <span>&nbsp;2-way communication that allows for a&nbsp; seamless dialogue. Intuitively engages based on specified criteria.<br></span> </div>
+                    <h5 class="">Intelligent Conversation</h5> <span>&nbsp;2-way communication that allows for a&nbsp; seamless dialogue. Intuitively engages based on specified criteria.<br></span> </div>
                 </div>
               </a>
             </div>
@@ -238,9 +238,9 @@
                 <div class="hover-element__initial">
                   <div class="background-image-holder"> <img alt="Orchestrate sequences based on desired outcomes with Rhonda using Artificial Intelligence." src="img/imi-rhonda automated workflow.jpg"> </div>
                 </div>
-                <div class="hover-element__reveal" data-overlay="4">
+                <div  class="rhondaPage hover-element__reveal myhover " data-overlay="4">
                   <div class="project-thumb__title">
-                    <h5>Automated Workflow<br></h5> <span>Orchestrate sequences based on desired outcomes.&nbsp;<br></span> </div>
+                    <h5 id="myText">Automated Workflow<br></h5> <span>Orchestrate sequences based on desired outcomes.&nbsp;<br></span> </div>
                 </div>
               </a>
             </div>
@@ -251,7 +251,7 @@
                 <div class="hover-element__initial">
                   <div class="background-image-holder"> <img alt="Receive real-time data for every message you send out with Rhonda using Artificial Intelligence." src="img/imi-rhonda intelligent feedback.jpg"> </div>
                 </div>
-                <div class="hover-element__reveal" data-overlay="4">
+                <div class="rhondaPage hover-element__reveal myhover" data-overlay="4">
                   <div class="project-thumb__title">
                     <h5><b>Intelligent Feedback</b></h5> <span>Receive real-time data for every message you send out to optimize your level of service.<br></span> </div>
                 </div>
@@ -264,7 +264,7 @@
                 <div class="hover-element__initial">
                   <div class="background-image-holder"> <img alt="Reach a broader audience with Rhonda by integrating with Facebook, Slack, Google Assistant and the list grows every day!" src="img/imi-Rhonda integrations.jpg"> </div>
                 </div>
-                <div class="hover-element__reveal" data-overlay="4">
+                <div class="rhondaPage hover-element__reveal myhover " data-overlay="4">
                   <div class="project-thumb__title">
                     <h5><b>Integrations</b></h5> <span>Reach a broader audience by integrating with Facebook, Slack, Google Assistant and the list grows every day!&nbsp;&nbsp;</span> </div>
                 </div>
@@ -284,7 +284,7 @@
                 <div class="hover-element__initial">
                   <div class="background-image-holder"> <img alt="Our data is encrypted to ensure your information is safely stored on our servers." src="img/rhonda-privacy.jpg"> </div>
                 </div>
-                <div class="hover-element__reveal" data-overlay="4">
+                <div class="rhondaPage hover-element__reveal myhover " data-overlay="4">
                   <div class="project-thumb__title">
                     <h5>Privacy</h5> <span>Our data is encrypted to ensure your information is safely stored on our servers.</span> </div>
                 </div>
@@ -297,7 +297,7 @@
                 <div class="hover-element__initial">
                   <div class="background-image-holder"> <img alt="Recognize ideal candidates sooner through Rhonda's Artificial Intelligence predictive learning." src="img/rhonda-predictive.jpg"> </div>
                 </div>
-                <div class="hover-element__reveal" data-overlay="4">
+                <div class="rhondaPage hover-element__reveal myhover " data-overlay="4">
                   <div class="project-thumb__title">
                     <h5>Predictive System</h5> <span>Recognize ideal candidates sooner through predictive learning.</span> </div>
                 </div>
