--- a/rhonda.html
+++ b/rhonda.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>IMI - A Global People Company</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
