--- a/solutions-home.html
+++ b/solutions-home.html
@@ -13,6 +13,11 @@
   <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
+  <style type="text/css">
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
 
 </head>
@@ -129,25 +134,25 @@
     <section class="page-navigator">
       <ul>
         <li>
-          <a href="#section1"  data-title="Solution"> </a>
+          <a href="#section1" data-title="Solution"> </a>
         </li>
 
         <li>
-          <a href="#section2"  data-title="Automation"> </a>
+          <a href="#section2" data-title="Automation"> </a>
         </li>
         <li>
-          <a href="#section3"  data-title="Material Handling"> </a>
+          <a href="#section3" data-title="Material Handling"> </a>
         </li>
         <li>
-          <a href="#section4"  data-title="Executive Search"> </a>
+          <a href="#section4" data-title="Executive Search"> </a>
         </li>
         <li>
-          <a href="#section5"  data-title="Meet Rhonda"> </a>
+          <a href="#section5" data-title="Meet Rhonda"> </a>
         </li>
       </ul>
     </section>
 
-    <section id="section1" class="height-100 section--ken-burns">
+    <section id="section1" class=" section--ken-burns">
       <section class="text-center bg--secondary">
         <div class="container">
           <div class="row">
@@ -207,20 +212,20 @@
     <!-- <a  class="in-page-link"></a> -->
 
 
-      <section id="section2" style="margin-top:0; padding-top:0" class="cover imagebg text-center height-100 section--ken-burns" data-overlay="1">
-        <div class="background-image-holder"> <img alt="Save millions in lost revenue with Rhonda's Artificial Intelligence automation" src="img/imi-Automation Artificial Intelligence-Header.jpg"> </div>
-        <div class="container pos-vertical-center">
-          <div class="row">
-            <div class="col-sm-8 col-md-9">
-              <h1> Automation </h1>
-              <p class="lead"> Save millions in lost revenue by proactively addressing issues before breakdowns occur. Zoom out to look at the overall productivity of your workforce and equipment to pinpoint areas of processes that are performing below acceptable levels.<br>              </p>
-              <a class="btn type--uppercase" href="#"> <span class="btn__text">
+    <section id="section2" style="margin-top:0; padding-top:0" class="cover imagebg text-center height-100 section--ken-burns" data-overlay="1">
+      <div class="background-image-holder"> <img alt="Save millions in lost revenue with Rhonda's Artificial Intelligence automation" src="img/imi-Automation Artificial Intelligence-Header.jpg"> </div>
+      <div class="container pos-vertical-center">
+        <div class="row">
+          <div class="col-sm-8 col-md-9">
+            <h1> Automation </h1>
+            <p class="lead"> Save millions in lost revenue by proactively addressing issues before breakdowns occur. Zoom out to look at the overall productivity of your workforce and equipment to pinpoint areas of processes that are performing below acceptable levels.<br>              </p>
+            <a class="btn type--uppercase" href="#"> <span class="btn__text">
               View The Demos
             </span> </a>
-            </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
 
 
@@ -309,7 +314,6 @@
   <script src="js/smooth-scroll.min.js"></script>
   <script src="js/scripts.js"></script>
   <script type="text/javascript">
-
   </script>
 
 </body>
