remove space under clients

--- a/solutions-home.html
+++ b/solutions-home.html
@@ -152,7 +152,7 @@
       </ul>
     </section>
 
-    <section id="section1" class=" section--ken-burns">
+    <section style="padding-bottom:0" id="section1" class=" section--ken-burns">
       <section class="text-center bg--secondary">
         <div class="container">
           <div class="row">
