finish linking 1st

--- a/execsearch.html
+++ b/execsearch.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -16,7 +17,7 @@
     </head>
     <body data-smooth-scroll-offset="77">
         <div class="nav-container">
-            <div class="via-1519833710678" via="via-1519833710678" vio="Top">
+            <div class="via-1520372906696" via="via-1520372906696" vio="Solutions">
                 <div class="bar bar--sm visible-xs">
                     <div class="container">
                         <div class="row">
@@ -24,7 +25,7 @@
                                 <a href="index.html"> <img class="logo logo-dark" alt="logo" src="img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
                             </div>
                             <div class="col-xs-9 col-sm-10 text-right">
-                                <a href="#about" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
+                                <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
                             </div>
                         </div>
                     </div>
@@ -40,14 +41,14 @@
                             <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
                                 <div class="bar__module">
                                     <ul class="menu-horizontal text-left">
-                                        <li> <a href="#about">Jobs</a> </li>
+                                        <li> <a href="#">Good Jobs</a> </li>
                                         <li class="dropdown">
                                             <div class="dropdown__container">
                                                 <div class="container">
                                                     <div class="row">
                                                         <div class="dropdown__content col-md-2">
                                                             <ul class="menu-vertical">
-                                                                <li> <a href="#about">Automation</a> </li>
+                                                                <li> <a href="#">Automation</a> </li>
                                                             </ul>
                                                         </div>
                                                     </div>
@@ -61,47 +62,46 @@
                                                     <div class="row">
                                                         <div class="dropdown__content col-md-2">
                                                             <ul class="menu-vertical">
-                                                                <li> <a href="#about">Automation</a> </li>
-                                                                <li> <a href="#about">Material Handling</a> </li>
-                                                                <li> <a href="#about">Executive Search</a> </li>
-                                                                <li> <a href="#about">Rhonda</a> </li>
+                                                                <li> <a href="#">Automation<br></a> </li>
+                                                                <li> <a href="#">Material Handling<br></a> </li>
+                                                                <li> <a href="#">Executive Search<br></a> </li>
+                                                                <li> <a href="#">Rhonda<br></a> </li>
                                                             </ul>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </li>
+                                        <li>
+                                            <a href="#"> </a>
+                                        </li>
                                         <li class="dropdown">
                                             <div class="dropdown__container">
                                                 <div class="container">
                                                     <div class="row">
-                                                        <div class="dropdown__content col-md-11">
+                                                        <div class="dropdown__content col-md-12">
                                                             <div class="col-md-3">
-                                                                <h5><span>Automation</span></h5>
+                                                                <h5>Menu Title</h5>
                                                                 <ul class="menu-vertical">
-                                                                    <li> <a href="#about">Automation</a> </li>
-                                                                    <li> <a href="#about">Executive Search</a> </li>
+                                                                    <li> <a href="#">Single Link</a> </li>
                                                                 </ul>
                                                             </div>
                                                             <div class="col-md-3">
                                                                 <h5>Menu Title</h5>
                                                                 <ul class="menu-vertical">
-                                                                    <li> <a href="#about">Material Handling</a><a href="#about">Material Handling</a> </li>
-                                                                    <li> <a href="#about">Rhonda</a><a href="#about">Material Handling</a> </li>
+                                                                    <li> <a href="#">Single Link</a> </li>
                                                                 </ul>
                                                             </div>
                                                             <div class="col-md-3">
                                                                 <h5>Menu Title</h5>
                                                                 <ul class="menu-vertical">
-                                                                    <li>
-                                                                        <a href="#about"> </a>
-                                                                    </li>
+                                                                    <li> <a href="#">Single Link</a> </li>
                                                                 </ul>
                                                             </div>
                                                             <div class="col-md-3">
                                                                 <h5>Menu Title</h5>
                                                                 <ul class="menu-vertical">
-                                                                    <li> <a href="#about">Single Link</a> </li>
+                                                                    <li> <a href="#">Single Link</a> </li>
                                                                 </ul>
                                                             </div>
                                                         </div>
@@ -110,6 +110,10 @@
                                             </div>
                                         </li>
                                     </ul>
+                                </div>
+                                <div class="bar__module">
+                                    <a class="btn btn--sm type--uppercase btn--primary" href="#purchase-template"> <span class="btn__text">
+                                    Contact</span> </a>
                                 </div>
                             </div>
                         </div>
@@ -120,11 +124,11 @@
         <div class="main-container">
             <a id="automation-cover" class="in-page-link"></a>
             <section class="text-center imagebg space--lg" data-overlay="5">
-                <div class="background-image-holder"> <img alt="background" src="img/imi-Rhonda-Artificial-Intelligence-Good-Jobs-Material-Handling.jpg"> </div>
+                <div class="background-image-holder"> <img alt="background" src="img/imi-Rhonda-Artificial-Intelligence-sub-Automation.jpg"> </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 col-md-8">
-                            <h1>Material Handling</h1>
+                            <h1>Executive Search</h1>
                             <p class="lead"> Fusce dapibus enim et mauris feugiat, vitae hendrerit leo commodo. Nam posuere tempor maximus. Curabitur condimentum elit in dapibus sollicitudin. </p>
                         </div>
                     </div>
