--- a/jobs-home.html
+++ b/jobs-home.html
@@ -96,7 +96,7 @@
                                     </ul>
                                 </div>
                                 <div class="bar__module">
-                                    <a class="btn btn--sm btn--primary type--uppercase" href="#purchase-template"> <span class="btn__text">
+                                    <a class="btn btn--sm btn--primary type--uppercase" href="jobs-sign-up.html"> <span class="btn__text">
                                     Upload Resume</span> </a>
                                 </div>
                             </div>
@@ -239,7 +239,7 @@
                                 <li> <a href="#about"><span class="h6 type--uppercase"><p>About</p></span></a> </li>
                                 <li> <a href="#about"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
                                 <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-                                <li> <a href="#about"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+                                <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
                                 <li> <a href="#about"><span class="h6 type--uppercase">COntact</span></a> </li>
                             </ul>
                         </div>
