--- a/solutions-home.html
+++ b/solutions-home.html
@@ -219,7 +219,7 @@
           <div class="col-sm-8 col-md-9">
             <h1> Automation </h1>
             <p class="lead"> Save millions in lost revenue by proactively addressing issues before breakdowns occur. Zoom out to look at the overall productivity of your workforce and equipment to pinpoint areas of processes that are performing below acceptable levels.<br>              </p>
-            <a class="btn type--uppercase" href="#"> <span class="btn__text">
+            <a class="btn type--uppercase" href="automation.html"> <span class="btn__text">
               View The Demos
             </span> </a>
           </div>
@@ -242,7 +242,7 @@
             <h1> Material Handling </h1>
             <p class="lead"> Receive instant information about employee and supervisor performance, training<br>and safety based on a daily check-in and rating system. Go back over a period of weeks, months, even years to check employee’s average performance rating to
               ensure consistent satisfaction and execution.&nbsp;<br> </p>
-            <a class="btn type--uppercase" href="#"> <span class="btn__text">
+            <a class="btn type--uppercase" href="material-handling.html"> <span class="btn__text">
 						Learn More</span> </a>
           </div>
         </div>
@@ -257,7 +257,7 @@
             <h1> Executive Search </h1>
             <p class="lead"> Let Rhonda automate your processes from pre-screening to on-boarding. Preset questions with assigned values determine who would be the best fit for your organization automatically.<br>Schedule formal interviews, offer contracts, provide helpful
               info for their first day:<br>Rhonda makes a generally tedious process seamless.<br> </p>
-            <a class="btn type--uppercase" href="#"> <span class="btn__text">
+            <a class="btn type--uppercase" href="execsearch.html"> <span class="btn__text">
 						Learn More</span> </a>
           </div>
         </div>
@@ -271,7 +271,7 @@
           <div class="col-sm-8 col-md-9">
             <h1>Meet Rhonda</h1>
             <p class="lead"> Your AI workforce management solution with the power to automate thousands of tasks.<br>Performance management, analytics, trackability, compliancy extracted in real-time and available within your own customizable dashboard.<br> </p>
-            <a class="btn type--uppercase" href="#"> <span class="btn__text">
+            <a class="btn type--uppercase" href="rhonda.html"> <span class="btn__text">
 						Learn More</span> </a>
           </div>
         </div>
@@ -286,7 +286,7 @@
               <li> <a href="#about"><span class="h6 type--uppercase"><p>About</p></span></a> </li>
               <li> <a href="#about"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
               <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-              <li> <a href="#about"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+              <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
               <li> <a href="#about"><span class="h6 type--uppercase">COntact</span></a> </li>
             </ul>
           </div>
