--- a/jobs-list.html
+++ b/jobs-list.html
@@ -143,8 +143,8 @@
                         <div class="col-sm-6 col-md-5">
                             <div class="switchable__text">
                                 <h2>Mechanical Installer</h2>
-                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b>Apply Easily &gt;&gt;</b></p>
-                            </div>
+                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b><a href="jobsdescription.html" style="text-decoration:none">Apply Easily &gt;&gt;</a></b></p>
+                                  </div>
                         </div>
                     </div>
                 </div>
@@ -160,8 +160,9 @@
                         <div class="col-sm-6 col-md-5">
                             <div class="switchable__text">
                                 <h2>Mechanical Installer</h2>
-                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b>Apply Easily &gt;&gt;</b></p>
-                            </div>
+                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b><a href="jobsdescription.html" style="text-decoration:none">Apply Easily &gt;&gt;</a></b></p>
+
+                                    </div>
                         </div>
                     </div>
                 </div>
@@ -177,8 +178,9 @@
                         <div class="col-sm-6 col-md-5">
                             <div class="switchable__text">
                                 <h2>Mechanical Installer</h2>
-                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b>Apply Easily &gt;&gt;</b></p>
-                            </div>
+                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b><a href="jobsdescription.html" style="text-decoration:none">Apply Easily &gt;&gt;</a></b></p>
+
+                              </div>
                         </div>
                     </div>
                 </div>
@@ -194,8 +196,8 @@
                         <div class="col-sm-6 col-md-5">
                             <div class="switchable__text">
                                 <h2>Mechanical Installer</h2>
-                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b>Apply Easily &gt;&gt;</b></p>
-                            </div>
+                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b><a href="jobsdescription.html" style="text-decoration:none">Apply Easily &gt;&gt;</a></b></p>
+                              </div>
                         </div>
                     </div>
                 </div>
@@ -211,7 +213,8 @@
                         <div class="col-sm-6 col-md-5">
                             <div class="switchable__text">
                                 <h2>Mechanical Installer</h2>
-                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b>Apply Easily &gt;&gt;</b></p>
+                                <p><b>Salary: $61,00 - Job Type: Full-time<br></b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget felis blandit mi placerat tempus et at nibh...<br><br><b><a href="jobsdescription.html" style="text-decoration:none">Apply Easily &gt;&gt;</a></b></p>
+
                             </div>
                         </div>
                     </div>
@@ -297,7 +300,7 @@
                                 <li> <a href="#about"><span class="h6 type--uppercase"><p>About</p></span></a> </li>
                                 <li> <a href="#about"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
                                 <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-                                <li> <a href="#about"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+                                <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
                                 <li> <a href="#about"><span class="h6 type--uppercase">COntact</span></a> </li>
                             </ul>
                         </div>
