--- a/jobsdescription.html
+++ b/jobsdescription.html
@@ -149,7 +149,7 @@
                     <div class="row">
                         <div class="col-sm-8 col-md-6">
                             <div class="cta">
-                                <h2>Apply for a <b>good job</b> now.</h2> <a class="btn type--uppercase btn--primary" href="#purchase-template"><span class="btn__text">Apply NOw</span></a> </div>
+                                <h2>Apply for a <b>good job</b> now.</h2> <a class="btn type--uppercase btn--primary" href="imiapply.html"><span class="btn__text">Apply NOw</span></a> </div>
                         </div>
                     </div>
                 </div>
