--- a/rhonda.html
+++ b/rhonda.html
@@ -381,7 +381,7 @@
               <li> <a href="#about"><span class="h6 type--uppercase"><p>About</p></span></a> </li>
               <li> <a href="#about"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
               <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-              <li> <a href="#about"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+              <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
               <li> <a href="#about"><span class="h6 type--uppercase">COntact</span></a> </li>
             </ul>
           </div>
