headers linking done for all pages

--- a/solutions-home.html
+++ b/solutions-home.html
@@ -50,7 +50,7 @@
             <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
               <div class="bar__module">
                 <ul class="menu-horizontal text-left">
-                  <li> <a href="#">Good Jobs</a> </li>
+                  <li> <a href="jobs-home.html">Jobs</a> </li>
                   <li class="dropdown">
                     <div class="dropdown__container">
                       <div class="container">
@@ -71,10 +71,10 @@
                         <div class="row">
                           <div class="dropdown__content col-md-2">
                             <ul class="menu-vertical">
-                              <li> <a href="#">Automation<br></a> </li>
-                              <li> <a href="#">Material Handling<br></a> </li>
-                              <li> <a href="#">Executive Search<br></a> </li>
-                              <li> <a href="#">Rhonda<br></a> </li>
+                              <li> <a href="#section2">Automation<br></a> </li>
+                              <li> <a href="#section3">Material Handling<br></a> </li>
+                              <li> <a href="#section4">Executive Search<br></a> </li>
+                              <li> <a href="#section5">Rhonda<br></a> </li>
                             </ul>
                           </div>
                         </div>
