--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 </head>
 
 <body data-smooth-scroll-offset="77">
-  <div class="nav-container">
+  <!-- <div class="nav-container">
     <div class="via-1520372906696" via="via-1520372906696" vio="Solutions">
       <div class="bar bar--sm visible-xs">
         <div class="container">
@@ -120,7 +120,120 @@
         </div>
       </nav>
     </div>
+  </div> -->
+
+
+
+  <div class="nav-container">
+    <div class="via-1520372906696" via="via-1520372906696" vio="Solutions">
+      <div class="bar bar--sm visible-xs">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-3 col-sm-2">
+              <a href="index.html"> <img class="logo logo-dark" alt="logo" src="img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
+            </div>
+            <div class="col-xs-9 col-sm-10 text-right">
+              <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav id="menu1" class="bar bar-1 hidden-xs">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1 col-sm-2 hidden-xs">
+              <div class="bar__module">
+                <a href="index.html"> <img class="logo logo-dark" alt="imi powered by our Artificial Intelligence Rhonda" src="img/imi-good-jobs-logo.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
+              </div>
+            </div>
+            <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
+              <div class="bar__module">
+                <ul class="menu-horizontal text-left">
+                  <li> <a href="jobs-home.html">Jobs</a> </li>
+                  <li class="dropdown">
+                    <div class="dropdown__container">
+                      <div class="container">
+                        <div class="row">
+                          <div class="dropdown__content col-md-2">
+                            <ul class="menu-vertical">
+                              <li> <a href="#">Automation</a> </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="dropdown">
+                    <a href="solutions-home.html" >SOLUTIONS</a>
+                        <span class="dropdown__trigger">
+                    </span>
+                    <div class="dropdown__container">
+                      <div class="container">
+                        <div class="row">
+                          <div class="dropdown__content col-md-2">
+                            <ul class="menu-vertical">
+                              <li> <a href="solutions-home.html#section2">Automation</a> </li>
+                              <li> <a href="solutions-home.html#section3">Material Handling</a> </li>
+                              <li> <a href="solutions-home.html#section4">Executive Search</a> </li>
+                              <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <a href="#"> </a>
+                  </li>
+                  <li class="dropdown">
+                    <div class="dropdown__container">
+                      <div class="container">
+                        <div class="row">
+                          <div class="dropdown__content col-md-12">
+                            <div class="col-md-3">
+                              <h5>Menu Title</h5>
+                              <ul class="menu-vertical">
+                                <li> <a href="#">Single Link</a> </li>
+                              </ul>
+                            </div>
+                            <div class="col-md-3">
+                              <h5>Menu Title</h5>
+                              <ul class="menu-vertical">
+                                <li> <a href="#">Single Link</a> </li>
+                              </ul>
+                            </div>
+                            <div class="col-md-3">
+                              <h5>Menu Title</h5>
+                              <ul class="menu-vertical">
+                                <li> <a href="#">Single Link</a> </li>
+                              </ul>
+                            </div>
+                            <div class="col-md-3">
+                              <h5>Menu Title</h5>
+                              <ul class="menu-vertical">
+                                <li> <a href="#">Single Link</a> </li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="bar__module">
+                <a class="btn btn--sm type--uppercase btn--primary" href="contact.html"> <span class="btn__text">
+                                    Contact</span> </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
   </div>
+
+
+
   <div class="main-container">
     <section class="switchable imagebg space--lg">
       <div class="background-image-holder"> <img alt="background" src="img/imi-Artificial Intelligence rhonda bg.jpg"> </div>
