--- a/jobs-home.html
+++ b/jobs-home.html
@@ -42,17 +42,20 @@
                                     <ul class="menu-horizontal text-left">
                                         <li> <a href="#">
                                         Jobs</a> </li>
-                                        <li class="dropdown"> <span class="dropdown__trigger">
-                                        SOLUTIONS  </span>
+                                        <li class="dropdown">
+
+                                       <a href="solutions-home.html" >    SOLUTIONS     </a>
+                                           <span class="dropdown__trigger">
+                                       </span>
                                             <div class="dropdown__container">
                                                 <div class="container">
                                                     <div class="row">
                                                         <div class="dropdown__content col-md-2">
                                                             <ul class="menu-vertical">
-                                                                <li> <a href="#">Automation</a> </li>
-                                                                <li> <a href="#">Material Handling</a> </li>
-                                                                <li> <a href="#">Executive Search</a> </li>
-                                                                <li> <a href="#">Rhonda</a> </li>
+                                                                <li> <a href="solutions-home.html#section2">Automation</a> </li>
+                                                                <li> <a href="solutions-home.html#section3">Material Handling</a> </li>
+                                                                <li> <a href="solutions-home.html#section4">Executive Search</a> </li>
+                                                                <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
                                                             </ul>
                                                         </div>
                                                     </div>
