change all headers and footers, add conversation backgroud img

--- a/rhonda.html
+++ b/rhonda.html
@@ -149,7 +149,8 @@
             <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
               <div class="bar__module">
                 <ul class="menu-horizontal text-left">
-                  <li> <a href="jobs-home.html">Jobs</a> </li>
+                  <li> <a href="home.html">  Home</a> </li>
+                  <li> <a href="goodjobs.html"> GOOD JOBS</a> </li>
                   <li class="dropdown">
                     <div class="dropdown__container">
                       <div class="container">
@@ -245,14 +246,14 @@
             </section> -->
     <section class="cover imagebg height-100 text-center image--light">
       <div style="display:table;" class="background-image-holder">
-        <img alt="Rhonda uses predictive analytics to pre-determine a system malfunction before it happens powered by Artificial Intelligence" src="img/imi-rhonda header home.jpg">
-        <div style="display:table-cell;  vertical-align:middle;" class="container">
+        <img alt="Rhonda uses predictive analytics to pre-determine a system malfunction before it happens powered by Artificial Intelligence" src="img/Rhonda-Chat-Function-March2018-Rhonda.jpg">
+        <!-- <div style="display:table-cell;  vertical-align:middle;" class="container">
           <div class="row">
             <div class="col-sm-12">
               <div class="typed-headline"> <span class="h2 inline-block"><p style="color:#383838">I'm Rhonda — An Artificial Intelligence built for</p></span> <span class="h2 inline-block typed-text typed-text--cursor color--white" data-typed-strings="automation, workforce management,  interviews, scheduling, surveys, rating">automation</span>                </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <a id="operate-title" class="in-page-link"></a>
@@ -483,34 +484,33 @@
       </div>
     </section>
     <footer class="text-center-xs space--xs">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-7">
-            <ul class="list-inline">
-              <li> <a href="#about"><span class="h6 type--uppercase"><p>About</p></span></a> </li>
-              <li> <a href="#about"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
-              <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-              <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
-              <li> <a href="#about"><span class="h6 type--uppercase">COntact</span></a> </li>
-            </ul>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-7">
+              <ul class="list-inline">
+                <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
+                <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
+                <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+                <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
+              </ul>
+            </div>
+            <div class="col-sm-5 text-right text-center-xs">
+              <ul class="social-list list-inline list--hover">
+                <li><a href="https://www.facebook.com/IMIsocial/" target="_self"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UClr2KzyTFjUhlie60BBW53Q" target="_self"><i class="socicon icon socicon-youtube icon--xs"></i></a></li>
+                <li><a href="https://www.instagram.com/imi.social/" target="_self"><i class="socicon icon socicon-instagram icon--xs"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/imi-material-handling-logistics/" target="_self"><i class="socicon icon socicon-linkedin icon--xs"></i></a></li>
+                <li><a href="https://twitter.com/imi_social" target="_self"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
+              </ul>
+            </div>
           </div>
-          <div class="col-sm-5 text-right text-center-xs">
-            <ul class="social-list list-inline list--hover">
-              <li><a href="https://www.facebook.com/IMIsocial/" target="_self"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
-              <li><a href="https://www.youtube.com/channel/UClr2KzyTFjUhlie60BBW53Q" target="_self"><i class="socicon icon socicon-youtube icon--xs"></i></a></li>
-              <li><a href="https://www.instagram.com/imi.social/" target="_self"><i class="socicon icon socicon-instagram icon--xs"></i></a></li>
-              <li><a href="https://www.linkedin.com/company/imi-material-handling-logistics/" target="_self"><i class="socicon icon socicon-linkedin icon--xs"></i></a></li>
-              <li><a href="https://twitter.com/imi_social" target="_self"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
-            </ul>
+          <div class="row">
+            <div class="col-sm-7"> <span class="type--fine-print">© <span class="update-year">2018</span> IMI&nbsp; Inc.</span>
+            </div>
+            <div class="col-sm-5 text-right text-center-xs"> <a class="type--fine-print" href="#about">support@imipeople.com</a> </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-7"> <span class="type--fine-print">© <span class="update-year">2018</span> IMI&nbsp; Inc.</span>
-          </div>
-          <div class="col-sm-5 text-right text-center-xs"> <a class="type--fine-print" href="#about">support@imipeople.com</a> </div>
-        </div>
-      </div>
-    </footer>
+      </footer>
   </div>
   <script src="js/jquery-3.1.1.min.js"></script>
   <script src="js/flickity.min.js"></script>
