--- a/jobs-list.html
+++ b/jobs-list.html
@@ -15,97 +15,8 @@
 
     </head>
     <body data-smooth-scroll-offset="77">
+
         <!-- <div class="nav-container">
-            <div class="via-1521838517825" via="via-1521838517825" vio="Jobs">
-                <div class="bar bar--sm visible-xs">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xs-3 col-sm-2">
-                                <a href="index.html"> <img class="logo logo-dark" alt="logo" src="img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
-                            </div>
-                            <div class="col-xs-9 col-sm-10 text-right">
-                                <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <nav id="menu1" class="bar bar-1 hidden-xs">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-1 col-sm-2 hidden-xs">
-                                <div class="bar__module">
-                                    <a href="index.html"> <img class="logo logo-dark" alt="imi powered by our Artificial Intelligence Rhonda" src="img/imi-good-jobs-logo.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
-                                </div>
-                            </div>
-                            <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
-                                <div class="bar__module">
-                                    <ul class="menu-horizontal text-left">
-                                        <li> <a href="#">
-                                        Jobs</a> </li>
-                                        <li class="dropdown"> <span class="dropdown__trigger">
-                                        SOLUTIONS  </span>
-                                            <div class="dropdown__container">
-                                                <div class="container">
-                                                    <div class="row">
-                                                        <div class="dropdown__content col-md-2">
-                                                            <ul class="menu-vertical">
-                                                                <li> <a href="#">Automation</a> </li>
-                                                                <li> <a href="#">Material Handling</a> </li>
-                                                                <li> <a href="#">Executive Search</a> </li>
-                                                                <li> <a href="#">Rhonda</a> </li>
-                                                            </ul>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="dropdown">
-                                            <div class="dropdown__container">
-                                                <div class="container">
-                                                    <div class="row">
-                                                        <div class="dropdown__content col-md-12">
-                                                            <div class="col-md-3">
-                                                                <h5>Menu Title</h5>
-                                                                <ul class="menu-vertical">
-                                                                    <li> <a href="#">Single Link</a> </li>
-                                                                </ul>
-                                                            </div>
-                                                            <div class="col-md-3">
-                                                                <h5>Menu Title</h5>
-                                                                <ul class="menu-vertical">
-                                                                    <li> <a href="#">Single Link</a> </li>
-                                                                </ul>
-                                                            </div>
-                                                            <div class="col-md-3">
-                                                                <h5>Menu Title</h5>
-                                                                <ul class="menu-vertical">
-                                                                    <li> <a href="#">Single Link</a> </li>
-                                                                </ul>
-                                                            </div>
-                                                            <div class="col-md-3">
-                                                                <h5>Menu Title</h5>
-                                                                <ul class="menu-vertical">
-                                                                    <li> <a href="#">Single Link</a> </li>
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="bar__module">
-                                    <a class="btn btn--sm btn--primary type--uppercase" href="#purchase-template"> <span class="btn__text">
-                                    Upload Resume</span> </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div> -->
-        <div class="nav-container">
           <div class="via-1521838517825" via="via-1521838517825" vio="Jobs">
             <div class="bar bar--sm visible-xs">
               <div class="container">
@@ -197,7 +108,102 @@
               </div>
             </nav>
           </div>
+        </div> -->
+        <div class="nav-container">
+    <div class="via-1521838517825" via="via-1521838517825" vio="Jobs">
+      <div class="bar bar--sm visible-xs">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-3 col-sm-2">
+              <a href="index.html"> <img class="logo logo-dark" alt="logo" src="img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
+            </div>
+            <div class="col-xs-9 col-sm-10 text-right">
+              <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
+            </div>
+          </div>
         </div>
+      </div>
+      <nav id="menu1" class="bar bar-1 hidden-xs">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1 col-sm-2 hidden-xs">
+              <div class="bar__module">
+                <a href="index.html"> <img class="logo logo-dark" alt="imi powered by our Artificial Intelligence Rhonda" src="img/imi-good-jobs-logo.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
+              </div>
+            </div>
+            <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
+              <div class="bar__module">
+                <ul class="menu-horizontal text-left">
+                  <li> <a href="home.html">  Home</a> </li>
+
+                  <li> <a href="goodjobs.html"> GOOD JOBS</a> </li>
+                  <li class="dropdown">
+
+                    <a href="solutions-home.html">    SOLUTIONS     </a>
+                    <span class="dropdown__trigger">
+                                       </span>
+                    <div class="dropdown__container">
+                      <div class="container">
+                        <div class="row">
+                          <div class="dropdown__content col-md-2">
+                            <ul class="menu-vertical">
+                              <li> <a href="solutions-home.html#section2">Automation</a> </li>
+                              <li> <a href="solutions-home.html#section3">Material Handling</a> </li>
+                              <li> <a href="solutions-home.html#section4">Executive Search</a> </li>
+                              <li> <a href="solutions-home.html#section5">Rhonda</a> </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="dropdown">
+                    <div class="dropdown__container">
+                      <div class="container">
+                        <div class="row">
+                          <div class="dropdown__content col-md-12">
+                            <div class="col-md-3">
+                              <h5>Menu Title</h5>
+                              <ul class="menu-vertical">
+                                <li> <a href="#">Single Link</a> </li>
+                              </ul>
+                            </div>
+                            <div class="col-md-3">
+                              <h5>Menu Title</h5>
+                              <ul class="menu-vertical">
+                                <li> <a href="#">Single Link</a> </li>
+                              </ul>
+                            </div>
+                            <div class="col-md-3">
+                              <h5>Menu Title</h5>
+                              <ul class="menu-vertical">
+                                <li> <a href="#">Single Link</a> </li>
+                              </ul>
+                            </div>
+                            <div class="col-md-3">
+                              <h5>Menu Title</h5>
+                              <ul class="menu-vertical">
+                                <li> <a href="#">Single Link</a> </li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="bar__module">
+                <a class="btn btn--sm btn--primary type--uppercase" href="jobs-sign-up.html"> <span class="btn__text">
+                                    Upload Resume</span> </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+
         <div class="main-container">
             <section class="imagebg videobg text-center height-80" data-overlay="4"> <video autoplay="" loop="" muted="">
 		<source src="video/video.webm" type="video/webm">
@@ -386,34 +392,33 @@
                 </div>
             </section>
             <footer class="text-center-xs space--xs">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-7">
-                            <ul class="list-inline">
-                                <li> <a href="#about"><span class="h6 type--uppercase"><p>About</p></span></a> </li>
-                                <li> <a href="#about"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
-                                <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
-                                <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
-                                <li> <a href="#about"><span class="h6 type--uppercase">COntact</span></a> </li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-5 text-right text-center-xs">
-                            <ul class="social-list list-inline list--hover">
-                                <li><a href="https://www.facebook.com/IMIsocial/" target="_self"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
-                                <li><a href="https://www.youtube.com/channel/UClr2KzyTFjUhlie60BBW53Q" target="_self"><i class="socicon icon socicon-youtube icon--xs"></i></a></li>
-                                <li><a href="https://www.instagram.com/imi.social/" target="_self"><i class="socicon icon socicon-instagram icon--xs"></i></a></li>
-                                <li><a href="https://www.linkedin.com/company/imi-material-handling-logistics/" target="_self"><i class="socicon icon socicon-linkedin icon--xs"></i></a></li>
-                                <li><a href="https://twitter.com/imi_social" target="_self"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-7"> <span class="type--fine-print">© <span class="update-year">2018</span> IMI&nbsp; Inc.</span>
-                        </div>
-                        <div class="col-sm-5 text-right text-center-xs"> <a class="type--fine-print" href="#about">support@imipeople.com</a> </div>
-                    </div>
-                </div>
-            </footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-7">
+            <ul class="list-inline">
+              <li> <a href="goodjobs.html"><span class="h6 type--uppercase"><p>good Jobs</p></span></a> </li>
+              <li> <a href="#about"><span class="h6 type--uppercase"><p>Employee Login</p></span></a> </li>
+              <li> <a href="http://www.imipeople.com/career/"><span class="h6 type--uppercase"><p>JOIN THE TEAM</p></span></a> </li>
+              <li> <a href="contact.html"><span class="h6 type--uppercase">COntact</span></a> </li>
+            </ul>
+          </div>
+          <div class="col-sm-5 text-right text-center-xs">
+            <ul class="social-list list-inline list--hover">
+              <li><a href="https://www.facebook.com/IMIsocial/" target="_self"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UClr2KzyTFjUhlie60BBW53Q" target="_self"><i class="socicon icon socicon-youtube icon--xs"></i></a></li>
+              <li><a href="https://www.instagram.com/imi.social/" target="_self"><i class="socicon icon socicon-instagram icon--xs"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/imi-material-handling-logistics/" target="_self"><i class="socicon icon socicon-linkedin icon--xs"></i></a></li>
+              <li><a href="https://twitter.com/imi_social" target="_self"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-7"> <span class="type--fine-print">© <span class="update-year">2018</span> IMI&nbsp; Inc.</span>
+          </div>
+          <div class="col-sm-5 text-right text-center-xs"> <a class="type--fine-print" href="#about">support@imipeople.com</a> </div>
+        </div>
+      </div>
+    </footer>
         </div>
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="js/parallax.js"></script>
