adjust chat height done

--- a/homeEdit.html
+++ b/homeEdit.html
@@ -246,7 +246,7 @@
 
   <div class="main-container">
 
-    <section style="height:90vh" id="rhondaDiv" class="cover imagebg height-100 section--ken-burns">
+    <section style="height: calc(100vh - 85px); " id="rhondaDiv" class="cover imagebg height-100 section--ken-burns">
       <div id="Rhonda" />
     </section>
 
